--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!doctype html><meta charset=utf-8><title>shortest html5</title>
+<!doctype html><meta charset=utf-8><title>shortest html5</title><body>Hello World!</body>
