--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<!doctype html><meta charset=utf-8><title>shortest html5</title><body>Hello World!</body>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>A+++</title>
+  </head>
+  <body>
+    <p>Cleanest webpage</p>
+  </body>
+</html>
