--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
   </head>
   <body>
     <p>Cleanest webpage</p>
+    <div id="wcb" class="carbonbadge"></div>
+    <script src="https://unpkg.com/website-carbon-badges@1.1.3/b.min.js" defer></script>
   </body>
 </html>
